--- a/src/App.css
+++ b/src/App.css
@@ -1,19 +1,10 @@
 * {
+  margin: 0;
+  padding: 0;
   box-sizing: border-box;
+  font-family: system-ui, Avenir, Helvetica, Arial, sans-serif;
 }
 
 body {
-  width: 100vw;
-  font-family: "Poppins", sans-serif;
-  background-color: #ffffff;
-  color: #111111;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-}
-
-h1{
-  text-align: center;
-  font-size: 24px;
+  overflow-x: hidden;
 }
