--- a/src/components/navigationBar/navbar.css
+++ b/src/components/navigationBar/navbar.css
@@ -3,7 +3,7 @@
   top: 0;
   left: 0;
   width: 100%;
-  height: 80px;
+  height: 10vh;
 
   background: var(--color-bg-main);
   color: var(--color-primary);
