--- a/src/components/home/home.css
+++ b/src/components/home/home.css
@@ -1,8 +1,12 @@
 .hero-section {
   position: relative;
   width: 100%;
-  height: 90vh;
+  height: 100vh;
   overflow: hidden;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
 }
 
 .hero-slide {
@@ -28,12 +32,15 @@
 
 /* content */
 .hero-content {
+    width: 100%;
   position: absolute;
   top: 50%;
-  left: 80px;
   transform: translateY(-50%);
   color: #fff;
-  max-width: 600px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
 
 .hero-content h1 {
@@ -43,9 +50,12 @@
 }
 
 .hero-content h1 span {
-  display: block;
+  display: flex;
   color: var(--color-secondary);
   margin-top: 10px;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
 
 .hero-btn {
@@ -81,10 +91,22 @@
 
 .hero-arrow.left {
   left: 20px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
 
 .hero-arrow.right {
   right: 20px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.arrow-icon{
+    width: 25px;
 }
 
 /* dots */
@@ -112,12 +134,23 @@
 
 /* responsive */
 @media (max-width: 768px) {
-  .hero-content {
-    left: 30px;
-    right: 30px;
-  }
+    .hero-content h1 {
+        font-size: 20px;
+    }
 
-  .hero-content h1 {
-    font-size: 32px;
-  }
+    .hero-arrow{
+        width: 25px;
+        height: 25px;
+    }
+
+    .arrow-icon{
+        width: 15px;
+    }
+
+    .hero-btn{
+        height: 50px;
+        font-size: 13px;
+    }
+
+
 }
