--- a/src/components/navigationBar/navbar.css
+++ b/src/components/navigationBar/navbar.css
@@ -3,7 +3,7 @@
   top: 0;
   left: 0;
   width: 100%;
-  height: 10vh;
+  height: var(--navbar-height);
 
   background: var(--color-bg-main);
   color: var(--color-primary);
@@ -12,7 +12,7 @@
   justify-content: space-between;
   align-items: center;
 
-  padding: 0 40px;
+  padding: 0 30px;
   z-index: 1000;
 
   border-bottom: 1px solid var(--color-soft);
@@ -21,10 +21,17 @@
 /* ---------------- LOGO ---------------- */
 
 .logo {
-  font-size: 22px;
-  font-weight: 600;
-  letter-spacing: 1px;
-  color: var(--color-primary);
+  width: 30px;
+  height: 30px;
+}
+
+.logo-image{
+  height: 20px;
+  width: 20px;
+}
+
+.io-menu{
+  color: #c79c8b;
 }
 
 /* ---------------- DESKTOP NAV ---------------- */
@@ -195,7 +202,13 @@
   }
 
   .logo {
-    font-size: 18px;
+    width: 30px;
+    height: 30px;
+  }
+
+  .logo-image{
+    width: 30px;
+    height: 30px;
   }
 }
 
@@ -206,5 +219,15 @@
 
   .desktop {
     display: flex;
+  }
+
+  .logo {
+    width: 40px;
+    height: 40px;
+  }
+
+  .logo-image{
+    height: 40px;
+    width: 40px;
   }
 }
