--- a/src/components/navigationBar/navbar.css
+++ b/src/components/navigationBar/navbar.css
@@ -83,6 +83,38 @@
   background: var(--color-soft);
 }
 
+.services-dropdown {
+  position: relative;
+}
+
+.services-dropdown-menu {
+  position: absolute;
+  top: 45px;
+  left: 0;
+  background: var(--color-bg-card);
+  border-radius: 12px;
+  padding: 10px 0;
+  min-width: 230px;
+  box-shadow: 0 14px 40px rgba(0, 0, 0, 0.12);
+  z-index: 999;
+}
+
+.services-dropdown-menu li {
+  list-style: none;
+  padding: 12px 18px;
+}
+
+.services-dropdown-menu li a {
+  text-decoration: none;
+  color: var(--color-primary);
+  font-size: 14px;
+  font-weight: 500;
+}
+
+.services-dropdown-menu li:hover {
+  background: var(--color-bg-alt);
+}
+
 /* ---------------- LOGO ---------------- */
 
 .logo {
@@ -309,12 +341,21 @@
   }
 
   .logo {
-    width: 40px;
-    height: 40px;
-  }
+  width: 25%;
+  height: 100%;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+  object-fit: contain;
+}
 
-  .logo-image{
-    height: 40px;
-    width: 180px;
-  }
+.logo-image {
+  width: 80%;
+  height: 100%;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  object-fit: contain;
+}
 }
